--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "14.17.6"
+    "node": "14.17.6",
+    "npm": "6.14.15"
   },
   "scripts": {
     "start": "node index.js",
